--- a/public/css/components/ai-actor.css
+++ b/public/css/components/ai-actor.css
@@ -10,7 +10,7 @@
     background-color: #17212b;
     color: #8899A6;
     box-shadow: 2px 4px 6px 2px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+    z-index: 1000;
     flex-direction: column;
 }
 
