--- a/public/css/components/notifications.css
+++ b/public/css/components/notifications.css
@@ -10,6 +10,6 @@
     background-color: #000;
     color: #fff;
     border-radius: 5px;
-    z-index: 9999;
+    z-index: 1000;
     max-width: max-content;
 }
