--- a/public/css/components/toolbars.css
+++ b/public/css/components/toolbars.css
@@ -77,7 +77,7 @@
     top: 100%;
     left: 0;
     margin-top: 5px;
-    z-index: 1050; /* Increase z-index */
+    z-index: 1000; /* Increase z-index */
     overflow-y: auto;
     max-height: 180px; /* Reduce max height */
     opacity: 0;
